--- a/style.css
+++ b/style.css
@@ -4,9 +4,9 @@
 }
 
 #game {
-    width: 500px;
+    width: 800px;
     height: 200px;
-    border: 1 px solid black;
+    border: 1px solid black;
     margin: auto;
 }
 
@@ -14,24 +14,13 @@
     width: 20px;
     height: 50px;
     background-color: blue;
-    position: relative;
+    position: absolute;
     top: 150px;
-    animation: jump 500ms infinite;
+    
 }
 
-#block {
-    width: 20px;
-    height: 20px;
-    background-color: red;
-    position: relative;
-    top: 130px;
-    left: 480px;
-    animation: block 1s infinite linear;
-}
-
-@keyframes block{ 
-    0%{left:480px;}
-    100%{left:-40px;}
+.animate{
+    animation: jump 300ms linear;
 }
 @keyframes jump{
     0%{top: 150px;}
@@ -39,6 +28,21 @@
     70%{top: 100px;}
     100%{top: 150px;}
 }
+#block {
+    width: 20px;
+    height: 20px;
+    background-color: red;
+    position: relative;
+    top: 180px;
+    left: 480px;
+    animation: block 2s infinite linear;
+}
+
+@keyframes block{ 
+    0%{left: 780px;}
+    100%{left:-10px;}
+}
+
 .animate{
     animation: jump 300ms linear;
 }
