--- a/style.css
+++ b/style.css
@@ -2,20 +2,26 @@
     padding: 0;
     margin: 0;
 }
-
+.outline{
+    background-color: black ;
+    
+}
 #game {
-    width: 800px;
-    height: 200px;
+    width: 1000px;
+    height: 300px;
     border: 1px solid black;
     margin: auto;
+    background-color: white;
+    margin-top: 10em;
 }
 
 #character {
     width: 20px;
     height: 50px;
     background-color: blue;
-    position: absolute;
-    top: 150px;
+    position: relative;
+    top: 250px;
+    left: 150px;
     
 }
 
@@ -33,13 +39,13 @@
     height: 20px;
     background-color: red;
     position: relative;
-    top: 180px;
+    top: 230px;
     left: 480px;
     animation: block 2s infinite linear;
 }
 
 @keyframes block{ 
-    0%{left: 780px;}
+    0%{left: 850px;}
     100%{left:-10px;}
 }
 
