--- a/style.css
+++ b/style.css
@@ -1,53 +1,41 @@
 *{
     padding: 0;
     margin: 0;
+    margin-bottom: 0;
+    margin-top: 0;
 }
 .outline{
     background-color: black ;
     
 }
-#game {
-    width: 1000px;
-    height: 300px;
-    border: 1px solid black;
-    margin: auto;
-    background-color: white;
-    margin-top: 10em;
-    
-    
-}
 
-#character {
-    width: 20px;
+
+
+.character {
+    width: 50px;
     height: 50px;
     background-color: blue;
-    position: relative;
-    top: 250px;
-    left: 40px;
+    position: absolute;
+    bottom: 0px;
     
 }
 
-.animate{
+/*.animate{
     animation: jump 300ms linear;
-}
-@keyframes jump{
-    0%{top: 150px;}
-    30%{top: 100px;}
-    70%{top: 100px;}
-    100%{top: 150px;}
-}
-#block {
-    width: 20px;
-    height: 20px;
+}*/
+
+
+.block {
+    position: absolute;
+    width: 50px;
+    height: 50px;
     background-color: red;
-    position: relative;
-    top: 230px;
-    left: 480px;
-    animation: block 2s infinite linear;
+    bottom: 0px;
+   /* animation: block 2s infinite linear;*/
 }
 
-@keyframes block{ 
+/*@keyframes block{ 
     0%{left: 850px;}
     100%{left:-20px;}
-}
+}*/ 
 
