--- a/style.css
+++ b/style.css
@@ -20,22 +20,22 @@
     
 }
 
-/*.animate{
+.animate{
     animation: jump 300ms linear;
-}*/
+}
 
 
 .block {
-    position: absolute;
-    width: 50px;
-    height: 50px;
+    width: 30px;
+    height: 30px;
     background-color: red;
+    position: absolute;
     bottom: 0px;
-   /* animation: block 2s infinite linear;*/
+    animation: block 2s infinite linear;
 }
 
-/*@keyframes block{ 
+@keyframes block{ 
     0%{left: 850px;}
     100%{left:-20px;}
-}*/ 
+}
 
