--- a/style.css
+++ b/style.css
@@ -1,29 +1,25 @@
 *{
-    padding: 0;
+    padding: 0px;
     margin: 0;
     margin-bottom: 0;
     margin-top: 0;
 }
-.outline{
-    background-color: black ;
-    
+
+#mycanvas {
+    border: 1px solid black;
+    width: 100%;
+    height: 100%;
+
 }
-
-
-
 .character {
     width: 50px;
     height: 50px;
     background-color: blue;
     position: absolute;
     bottom: 0px;
+  
     
 }
-
-.animate{
-    animation: jump 300ms linear;
-}
-
 
 .block {
     width: 30px;
@@ -31,11 +27,11 @@
     background-color: red;
     position: absolute;
     bottom: 0px;
-    animation: block 2s infinite linear;
+    
+
 }
 
-@keyframes block{ 
-    0%{left: 850px;}
-    100%{left:-20px;}
+#prompt {
+    text-align: center;
+    
 }
-
