--- a/style.css
+++ b/style.css
@@ -1,37 +1,74 @@
-*{
-    padding: 0px;
-    margin: 0;
-    margin-bottom: 0;
-    margin-top: 0;
+*, *::before, *::after{
+    box-sizing: border-box;
+    user-select: none;
 }
 
-#mycanvas {
-    border: 1px solid black;
-    width: 100%;
-    height: 100%;
+body {
+    margin: 0;
+    display: flex;
+    align-items: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  
+    
+    
+   
+}
+.game{
+    overflow: hidden;
+    text-align: center;
+    
+    
+   
+   
 
 }
 .character {
-    width: 50px;
-    height: 50px;
-    background-color: blue;
+    --bottom: 0;
     position: absolute;
-    bottom: 0px;
+   left: 1%;
+   
+   
   
     
 }
 
 .block {
     width: 30px;
-    height: 30px;
+    height: 60px;
     background-color: red;
     position: absolute;
     bottom: 0px;
+   
     
 
 }
 
+#scoring { 
+   position: absolute;
+   font-size: 3vmin;
+   right: 1vmin;
+   top:  1vmin;
+}
+
+.start-screen{
+    position: absolute;
+    font-size: 5vmin;
+    top: 50%;
+    left:50%;
+    transform: translate(-50%, -50%);
+
+}
+
+.hide{
+    display:none;
+}
+
+
+
 #prompt {
-    text-align: center;
-    
+    position: absolute;
+    font-size: 5vmin;
+    top: 50%;
+    left: 45%;
 }
