--- a/style.css
+++ b/style.css
@@ -5,10 +5,9 @@
 
 body {
     margin: 0;
-    display: flex;
     align-items: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    
+   
    
 }
 
@@ -17,7 +16,8 @@ body {
 
 .game{
     overflow: hidden;
-    text-align: center;
+   
+    
    
     
     
@@ -48,7 +48,8 @@ body {
 
 #scoring { 
    position: absolute;
-   right: 2%
+   right: 2%;
+   z-index: 100;
   
 }
 
@@ -76,7 +77,12 @@ body {
     
 }
 
-#button{
-    display: inline-block;
+ button{
+    font-size: 3vmin;
+    display: block;
+    background-color: black;
+    color: white;
+
+  
 
 }
